--- a/assets/styles/_nav.scss
+++ b/assets/styles/_nav.scss
@@ -183,7 +183,7 @@
   outline: none;
   color: white;
   background-color: inherit;
-  font-size: 28px;
+  font-size: 16px;
   width: 100%;
   text-align: center;
   cursor: pointer;
@@ -217,14 +217,14 @@
   margin-left: 0px;
   text-align: center;
   border-radius: none;
-  font-size: 28px;
+  font-size: 16px;
   @media screen and (min-width: $tablet) {
     position: absolute;
-    z-index: 100;
+    z-index: 1009;
     margin-top: 25px;
     text-align: left;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 28px;
     background: linear-gradient(
       90deg,
       rgba(37, 189, 190, 1) 0%,
@@ -242,8 +242,10 @@
 .dropdwn-menu-container a {
   line-height: 3.25rem;
   padding: 0.5rem 1rem;
+  font-size: 16px;
   @media screen and (min-width: $tablet) {
     line-height: 1.25rem;
+    font-size: 28px;
   }
 }
 .dropdwn-menu-container a:hover {
